@@ -2672,19 +2672,20 @@ DRIVER(afv,d4)          //                  Addams Family Values (D-4 Redemption
 DRIVER(sttng,p4)        //WPC-523:  11/93 W Star Trek: The Next Generation (P-4)
 DRIVER(sttng,p5)        //          11/93 W Star Trek: The Next Generation (P-5)
 DRIVER(sttng,p6)        //                  Star Trek: The Next Generation (P-6) LED Ghost Fix
-DRIVER(sttng,p8)        //WPC-523:  11/93 W Star Trek: The Next Generation (P-8)
+DRIVER(sttng,p8)        //          11/93 W Star Trek: The Next Generation (P-8)
 DRIVER(sttng,l1)        //          11/93 W Star Trek: The Next Generation (LX-1)
 DRIVER(sttng,d1)        //                  Star Trek: The Next Generation (DX-1) LED Ghost Fix
 DRIVER(sttng,l2)        //          12/93 W Star Trek: The Next Generation (LX-2)
 DRIVER(sttng,d2)        //                  Star Trek: The Next Generation (DX-2) LED Ghost Fix
-DRIVER(sttng,l3)        //WPC-523:  12/93 W Star Trek: The Next Generation (LX-3)
+DRIVER(sttng,l3)        //          12/93 W Star Trek: The Next Generation (LX-3)
+DRIVER(sttng,l5)        //          12/93 W Star Trek: The Next Generation (LX-5)
 DRIVER(sttng,l7)        //          02/94 W Star Trek: The Next Generation (LX-7)
 DRIVER(sttng,d7)        //                  Star Trek: The Next Generation (DX-7) LED Ghost Fix
 DRIVER(sttng,l7c)       //          08/17 W Star Trek: The Next Generation (LX-7C Competition MOD)
 DRIVER(sttng,x7)        //          02/94 W Star Trek: The Next Generation (LX-7 Special)
 DRIVER(sttng,dx)        //                  Star Trek: The Next Generation (DX-7 Special) LED Ghost Fix
-DRIVER(sttng,s7)        //          02/94 W Star Trek: The Next Generation (LX-7) SP1
-DRIVER(sttng,ds)        //                  Star Trek: The Next Generation (DX-7) SP1 LED Ghost Fix
+DRIVER(sttng,s7)        //          02/94 W Star Trek: The Next Generation (LX-7 SP1)
+DRIVER(sttng,ds)        //                  Star Trek: The Next Generation (DX-7 SP1) LED Ghost Fix
 DRIVER(sttng,g7)        //          02/94 W Star Trek: The Next Generation (LG-7 German)
 DRIVER(sttng,h7)        //                  Star Trek: The Next Generation (HG-7) LED Ghost Fix
 DRIVER(pop,pa3)         //WPC-522:  12/93 B Popeye Saves the Earth (PA-3 Prototype)
@@ -2724,8 +2725,8 @@ DRIVER(tafg,la3)        //          10/94 B Addams Family Special Collectors Edi
 DRIVER(tafg,da3)        //                  Addams Family Special Collectors Edition, The (DA-3) LED Ghost Fix
 DRIVER(wcs,l2)          //WPC-531:  05/94 B World Cup Soccer (LX-2)
 DRIVER(wcs,d2)          //                  World Cup Soccer (DX-2) LED Ghost Fix
-DRIVER(wcs,l3c)         //WPC-531:  06/16 B World Cup Soccer (LX-3C)
-DRIVER(wcs,la2)         //WPC-531:  02/94 B World Cup Soccer (LA-2)
+DRIVER(wcs,l3c)         //          06/16 B World Cup Soccer (LX-3C)
+DRIVER(wcs,la2)         //          02/94 B World Cup Soccer (LA-2)
 DRIVER(wcs,p2)          //          ??/?? B World Cup Soccer (PA-2 Prototype)
 DRIVER(wcs,p5)          //                  World Cup Soccer (PA-5) LED Ghost Fix
 DRIVER(wcs,p3)          //          ??/?? B World Cup Soccer (PX-3 Prototype)
