@@ -49,8 +49,9 @@ Night Rider (Free Play+)
 Party Zone F-4 (Pinball FX MOD)
 Power Play (Free Play+)
 Radical! L-1C (competition MOD)
+Star Trek: The Next Generation LX-5
 Star's Phoenix (French Speech and corresponding Free Play variant)
-Star Wars (1.03, Display A0.46)
+Star Wars 1.03 with Display A0.46
 Strikes and Spares (Free Play+)
 Tom & Jerry (unofficial MOD of Hollywood Heat)
 Wheel of Fortune 6.02 (Home Rom)
